<resources>
    <string name="app_name">DAnime+</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_account">Account</string>
    <string name="title_details">Details</string>
    <string name="episode_image">Episode Image</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="danime_header">DAnime Authentication</string>

    <!-- DAnime Authentication Preferences -->
    <string name="dma_user_title">Dma User</string>
    <string name="certificate_session_id_title">Certification Session ID</string>

    <string name="action_settings_title">Settings</string>
    <string name="episode_tag_rental">RENTAL</string>
</resources>