<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <action
        android:id="@+id/action_open_details"
        app:destination="@id/navigation_details" />

    <action
        android:id="@+id/action_search"
        app:destination="@id/navigation_search" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="jp.tomo0611.danime.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="jp.tomo0611.danime.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="jp.tomo0611.danime.ui.downloads.DownloadsFragment"
        android:label="@string/title_downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="jp.tomo0611.danime.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="jp.tomo0611.danime.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="jp.tomo0611.danime.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />

</navigation>